add edit_community api
